<resources>
    <string name="app_name">HTWK Signal Harvester</string>
    <string name="title_home">Home</string>
    <string name="button_start">Start</string>
    <string name="button_record">Record</string>
    <string name="button_list">List</string>
    <string name="button_pause">Pause</string>
    <string name="button_stop">Stop</string>
    <string name="button_about">About</string>
    <string name="button_settings">Settings</string>

    <string name="button_save">Save CSV</string>
    <string name="button_delete">Delete</string>
    <string name="button_upload">Upload</string>
    <string name="button_status">Service status</string>
    <string name="title_empty">0</string>
    <string name="title_neighbours">All Cells</string>
    <string name="title_serving">Serving Cell</string>
    <string name="title_estimation">Estimation</string>
    <string name="title_location">Location</string>
    <string name="title_prediction">Classifier</string>
    <string name="dialog_message">Are you sure you want to delete this measurement?</string>
    <string name="dialog_title">Delete measurement</string>

    <string name="icon_uploaded">Uploaded</string>
    <string name="icon_saved">Saved</string>

    <string name="na_placeholder">N/A</string>

    <string name="meas_actualclass_label">Actual class</string>
    <string name="meas_predictedclass_label">Predicted class</string>

    <string name="meas_latitude_label">Lat</string>
    <string name="meas_longitude_label">Lon</string>

    <string name="meas_latitude_value">%1$.4f</string>
    <string name="meas_longitude_value">%1$.4f</string>
    <string name="meas_accuracy_value">%1$.2f</string>

    <string name="meas_type_label">Type</string>
    <string name="meas_type_lte">LTE</string>
    <string name="meas_type_wcdma">WCDMA</string>
    <string name="meas_type_cdma">CDMA</string>
    <string name="meas_type_gsm">GSM</string>

    <string name="meas_rsrp_label">RSRP</string>
    <string name="meas_rsrq_label">RSRQ</string>
    <string name="meas_rssnr_label">RSSNR</string>
    <string name="meas_dbm_label">Dbm</string>
    <string name="meas_lvl_label">Level</string>
    <string name="meas_rssi_label">RSSI</string>
    <string name="meas_rssnr_label_long">Reference Signal Signal to Noise Ratio</string>
    <string name="meas_cqi_label">CQI</string>
    <string name="meas_cqi_label_long">Channgel Quality Indicator</string>
    <string name="meas_ta_label">TA</string>
    <string name="meas_bw_label">BW</string>
    <string name="meas_ta_label_long">Timing Advance</string>

    <string name="meas_avb1_label">LOS</string>
    <string name="meas_avb2_label">RB</string>
    <string name="meas_avb3_label">AVB</string>
    <string name="meas_avb4_label">DELAY</string>

    <string name="meas_status_label">Status</string>
    <string name="meas_freq_label">Band</string>
    <string name="meas_mcc_label">MCC</string>
    <string name="meas_mnc_label">MNC</string>
    <string name="meas_pci_label">PCI</string>
    <string name="meas_time_label">Time</string>
    <string name="meas_accuracy_label">Accuracy</string>
    <string name="meas_speed_label">Speed</string>
    <string name="meas_network_label">Network</string>
    <string name="meas_asu_label">ASU</string>

    <string name="permission_needed">Application needs location permissions</string>

    <string name="meas_network_value">%s %s</string>


    <string name="about_title">HTWK Signal Harvester</string>
    <string name="about_support">Developer and maintainer: Igor Kim</string>
    <string name="about_issues">Report issues to:</string>
    <string name="about_copyright">2020 © HTWK</string>

    <string name="mapbox_access_token">
        pk.eyJ1IjoiaWdvcnNraCIsImEiOiJjanI4OHo4dGowM2NsNDVxcWtnMnAxcXJsIn0.hSNkb9tcYb7J-VBy7LD5HA
    </string>
    <string name="empty_time">00:00:00</string>

    <string name="upload_url">none</string>
    <string name="support_email">igor.kim@htwk-leipzig.de</string>
</resources>
