<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity">
    <TableLayout
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp">

        <TableRow android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0">
            <TextView
                    android:text="@string/about_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="1"
                    android:textSize="24sp" android:textStyle="bold" android:textAlignment="center"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView
                    android:text="@string/about_support"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3"
                    android:layout_weight="1"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView
                    android:text="@string/about_issues"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView5"
                    android:layout_weight="0.5"/>
            <TextView
                    android:text="@string/support_email"
                    android:layout_width="0dp"
                    android:autoLink="email"

                    android:layout_height="wrap_content" android:id="@+id/textView4"
                    android:layout_weight="1"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/about_copyright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView6"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>